--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.7",
     "clsx": "^2.1.1",
     "motion": "^12.23.12",
     "react": "^19.1.1",
